# envflag

./: .clangd  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  build.py
include/envflag/: envflag.hpp  envflag.ipp
src/: CMakeLists.txt  envflag.cpp
test/: CMakeLists.txt  all_test_flags.cpp  bool_flag.cpp  bool_flag_with_default.cpp  f64_flag.cpp  f64_flag_with_default.cpp  flag_test.py  i64_flag.cpp  i64_flag_with_default.cpp  json_flag.cpp  json_flag_with_default.cpp  str_flag.cpp  str_flag_with_default.cpp
